src/styles/pages/_home.scss
.container {
  --bs-gutter-x: 2rem;
  //containers
  @media (min-width: 576px) {
    max-width: 488px;
  }

  @media (min-width: 768px) {
    max-width: 680px;
  }

  @media (min-width: 992px) {
    max-width: 943px;
  }

  @media (min-width: 1200px) {
    max-width: 944px;
  }

  @media (min-width: 1400px) {
    max-width: 1184px;
  }

}

.container-fluid {
  @media (max-width: $screen-xs-max) {
    --bs-gutter-x: 0 !important;
  }

}


/* Particles */
#particles-js {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: transparent;
  z-index: -1;
  margin-top: -100px;
  left: 0;
}

//hero section arrow
.arrow-down {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 34px;
  height: 20px;
  position: relative;
  left: calc(50% - 16px);
  //bottom: 0; !!!!!!
  top: 16px;

  //top: 0px; // opt 2;
  //margin-top: 16px; opt 2
  //margin-bottom: 16px; opt 2
  //padding: 20px;
  //top: 0;
  //margin: 16px 0;
  -webkit-animation: arrow 0.5s 1s infinite ease-out alternate;

  @media (max-width: $screen-xs-max) {
    margin-top: 15px;
  }

  @media (min-width: $screen-md-min) {
    margin-top: 40px;
  }
}

.arrow-down:hover {
  -webkit-animation-play-state: paused;
}

.left {
  position: absolute;
  height: 4px;
  width: 20px;
  background: $white;
  -webkit-transform: rotate(240deg);
  top: 10px;
  left: 10px;
  -webkit-border-radius: 4px;
  -webkit-transform-origin: 5px 50%;
  -webkit-animation: leftArrow 0.5s 1s infinite ease-out alternate;
}

.right {
  position: absolute;
  height: 4px;
  width: 20px;
  background: $white;
  -webkit-transform: rotate(-60deg);
  top: 10px;
  left: 14px;
  -webkit-border-radius: 4px;
  -webkit-transform-origin: 5px 50%;
  -webkit-animation: rightArrow 0.5s 1s infinite ease-out alternate;
}

@-webkit-keyframes arrow {
  0% {
    top: 16px;
    //top: 10px; opt 2
  }
  100% {
    top: 6px;
    //top: 0px; opt 2
  }
}


@-webkit-keyframes leftArrow {
  0% {
  }
  100% {
    -webkit-transform: rotate(225deg);
  }
}

@-webkit-keyframes rightArrow {
  0% {
  }
  100% {
    -webkit-transform: rotate(-45deg);
  }
}

.hero-section {

  .hero-section-wrapper {
    height: 100%;
    //padding: 0 0 200px 0;

    @media (max-width: $screen-xs-max) {
      //padding: 70px 0 200px 0; !!!!!!
      padding: 48px 0 200px 0;
    }
  }

  .image-container {
    display: flex;
    justify-content: center;

    img {
      max-width: 100%;
      max-height: 100%;
      object-fit: contain;
    }

    .hero-svg-wrapper {
      position: relative;
      width: 100%;
      max-width: 600px;
      padding-top: 56.25%; // Maintain 16:9 for 1920x1080 SVGs
      display: block;
      overflow: hidden;

      @media (max-width: $screen-xs-max) {
        max-width: 420px;
        padding-top: 70%;
        margin: 0 auto;
        overflow: visible;
      }

      @media (min-width: $screen-md-min) {
        max-width: 980px;
        margin: 0 auto;
        overflow: visible;
      }

      .hero-svg-object {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        margin: 0;
        pointer-events: none;

        @media (max-width: $screen-xs-max) {
          transform: scale(1.025);
          transform-origin: center;
        }

        @media (min-width: $screen-md-min) {
          transform: scale(1.25);
          transform-origin: center;
        }
      }
    }
  }
  
  @media (max-width: $screen-xs-max) {
    height: 100vh;
    max-height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
    max-height: calc(var(--vh, 1vh) * 100);


    .image-container {
      // (screen - navbar - arrow height - title - browser-bar) / 2
      //original //good for android 13version bug
      //height: calc((100% - 70px - 40px - 4px - 216px) / 2);

      // good for all devices except android 13version bug
      //height: calc((var(--vh) * 100 - 50px - 40px - 216px) / 2);

      //height: calc((100% - 78px - 40px - 216px) / 2);
      //height: calc((100vh - 50px - 40px - 215px) / 2);
      //height: calc((var(--vh, 1vh) * 100 - 50px - 40px - 215px ) / 2);

    }


    //height: calc(100vh - 78px - 40px - 4px);
    //height: calc(100vh - 148px - 40px - 4px); 1
    //height: calc(100vh - 165px - 40px - 4px); //2
    //height: calc(100vh - 78px - 40px - 4px - env(safe-area-inset-bottom));
  }

  @media (min-width: $screen-md-min) {
    margin: 148px 0 200px 0;
  }

  .hero-info-block {
    max-width: 720px;
    //margin: 30px 0;

    @media (min-width: $screen-md-min) {
    margin-bottom: 70px !important;
    }

    // Mobile: Add padding between subheader and drone SVG
    @media (max-width: $screen-xs-max) {
      margin-bottom: 15px !important;
    }

    .hero-explore-label {
      font-weight: $font-weight-normal;
      font-size: 14px;
      line-height: 24px;
      letter-spacing: 0.08em;
      text-transform: uppercase;
      color: #9ca3af;

      @media (max-width: $screen-xs-max) {
        font-size: 11px;
        flex-shrink: 0;
      }
    }

    .hero-ai-link {
      display: inline-block;
      opacity: 0.82;
      transition: opacity 0.2s ease, transform 0.2s ease;

      &:hover {
        opacity: 1;
        transform: scale(1.04);
      }
    }

    .hero-ai-btn {
      height: 38px;
      width: auto;
      object-fit: contain;
      display: block;

      @media (max-width: $screen-xs-max) {
        height: 26px;
      }
    }

  }
}

.mobile-section {
  padding-top: 100px;
  margin-bottom: 200px;

  .mobile-info-block {
    max-width: 500px;
  }

  // buttons for small devices
  .mobile-btns {
    @media (max-width: 411px) {
      flex-direction: column;
    }
  }

  .container-fluid {
    .row {
      @media (min-width: $screen-md-min) {
        margin-bottom: 40px;
      }
    }
  }
}

.sdk-section {
  margin-bottom: 100px;

  .sdk-info-block {
    max-width: 560px;
    margin-bottom: 60px;

    .h-2-home {
      font-size: 44px;
      line-height: 56px;
    }

    .home-text.--text-2 {
      font-size: 18px;
      line-height: 28px;
    }
  }

  img {
    max-height: 560px;
  }
}

.lsp-section {
  margin-bottom: 100px;

  .lsp-info-block {
    max-width: 560px;
    margin-bottom: 60px;
  }
}

.cloud-section {
  margin-bottom: 200px;

  .cloud-info-block {
    max-width: 500px;
    margin-bottom: 60px;
  }
}

.contact-us-section {
  padding-top: 100px;
  margin-bottom: 50px;

  .contact-us-info-block {
    max-width: 560px;
    margin-bottom: 60px;
  }

  .social-media {
    width: 36px;
    height: 36px;
  }

  .icon {
    &:hover {
      filter: invert(0.4) sepia(1) saturate(20) hue-rotate(183.6deg) brightness(0.7) contrast(170%);
    }
  }
}

.min-margin {
  @media screen and (min-width: 375px) and (max-width: 390px) {
    margin-bottom: 5px;
  }

}

